# Bird-Tracking

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
components/esp-dl/: CMakeLists.txt  model.c
main/: CMakeLists.txt  idf_component.yml  image.hpp  main.c  main.cpp
main/model/: model_factory.cpp  model_factory.hpp
